Tilføjet validering af storage input

--- a/roles/pve_provision_vm/tasks/backup.yml
+++ b/roles/pve_provision_vm/tasks/backup.yml
@@ -3,6 +3,12 @@
   assert:
     that: guest_id is defined
 
+- name: Check if defined storage exists
+  shell: "pvesh get /storage/{{ guest_backup_storage }}"
+  register: validate_res
+  failed_when: validate_res.rc > 0
+  changed_when: false
+
 - name: Get storage if guest_backup_storage is not defined
   shell: "pvesh get /storage --type {{ guest_backup_storage_type }} --noborder --noheader"
   register: storage_res
